2014-08-06  Filip Pizlo  <fpizlo@apple.com>

        Fix 32-bit build.

        * jit/JITOpcodes32_64.cpp:
        (JSC::JIT::privateCompileHasIndexedProperty):

2014-08-06  Filip Pizlo  <fpizlo@apple.com>

        Merge r171389, r171495, r171508, r171510, r171605, r171606, r171611, r171614, r171763 from ftlopt.

    2014-07-28  Mark Hahnenberg  <mhahnenberg@apple.com>
    
            Support for-in in the FTL
            https://bugs.webkit.org/show_bug.cgi?id=134140
    
            Reviewed by Filip Pizlo.
    
            * dfg/DFGSSALoweringPhase.cpp:
            (JSC::DFG::SSALoweringPhase::handleNode):
            * ftl/FTLAbstractHeapRepository.cpp:
            * ftl/FTLAbstractHeapRepository.h:
            * ftl/FTLCapabilities.cpp:
            (JSC::FTL::canCompile):
            * ftl/FTLIntrinsicRepository.h:
            * ftl/FTLLowerDFGToLLVM.cpp:
            (JSC::FTL::LowerDFGToLLVM::compileNode):
            (JSC::FTL::LowerDFGToLLVM::compileHasIndexedProperty):
            (JSC::FTL::LowerDFGToLLVM::compileHasGenericProperty):
            (JSC::FTL::LowerDFGToLLVM::compileHasStructureProperty):
            (JSC::FTL::LowerDFGToLLVM::compileGetDirectPname):
            (JSC::FTL::LowerDFGToLLVM::compileGetEnumerableLength):
            (JSC::FTL::LowerDFGToLLVM::compileGetStructurePropertyEnumerator):
            (JSC::FTL::LowerDFGToLLVM::compileGetGenericPropertyEnumerator):
            (JSC::FTL::LowerDFGToLLVM::compileGetEnumeratorPname):
            (JSC::FTL::LowerDFGToLLVM::compileToIndexString):
    
    2014-07-25  Mark Hahnenberg  <mhahnenberg@apple.com>
    
            Remove JSPropertyNameIterator
            https://bugs.webkit.org/show_bug.cgi?id=135066
    
            Reviewed by Geoffrey Garen.
    
            It has been replaced by JSPropertyNameEnumerator.
    
            * JavaScriptCore.order:
            * bytecode/BytecodeBasicBlock.cpp:
            (JSC::isBranch):
            * bytecode/BytecodeList.json: